Fixing main menu alignment

--- a/_scss/layout.scss
+++ b/_scss/layout.scss
@@ -84,13 +84,13 @@ HEADER
   display: inline;
   line-height: 32px;
   vertical-align: baseline;
-  font-size: 16px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
 }
 
 .menu li a {
     color: #fff;
-    font-weight: 300;
     text-transform: uppercase;
 }
 
